# guition-jc1060p470c-bsp-full-feature-demo

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  I2C_MIPI_DSI_CONFLICT.md  README.md  README_LVGL.md  README_STEP4.md  RELEASE_NOTES.md  SANITIZATION_RULES.md  SDMMC_ARBITER_README.md  TROUBLESHOOTING.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.guition_jc1060  sdkconfig.txt  troubleshooting.md
.github/workflows/: sanitize_check.yml
components/bsp/: CMakeLists.txt  bsp_sensors.c  idf_component.yml
components/bsp/include/: bsp_priv.h  bsp_sensors.h
components/espressif__esp_cam_sensor/: CMakeLists.txt
components/guition_jc1060_bsp/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml
components/guition_jc1060_bsp/bootstrap/: bootstrap_manager.c  esp_hosted_wifi.c  esp_hosted_wifi.h  sd_card_manager.c  sd_card_manager.h  sdmmc_arbiter.c  sdmmc_arbiter.h
components/guition_jc1060_bsp/camera_slim/src/: ov02c10.c
components/guition_jc1060_bsp/drivers/: .gitkeep  es8311_bsp.c  es8311_bsp.h  gt911_bsp.c  gt911_bsp.h  jd9165_bsp.c  jd9165_bsp.h  lvgl_port.c  rx8025t_bsp.c  rx8025t_bsp.h
components/guition_jc1060_bsp/include/: bsp_board.h  bsp_heartbeat.h  bsp_log_panel.h  bsp_lvgl.h  bsp_radar.h  bsp_tests.h  debug_logging.h  lvgl_port.h
components/guition_jc1060_bsp/include/drivers/: ov02c10_wrapper.h
components/guition_jc1060_bsp/src/: bsp_board.c  bsp_heartbeat.c  bsp_lvgl.c  bsp_lvgl_demo.c  bsp_radar.c  bsp_tests.c
components/guition_jc1060_bsp/src/drivers/: ov02c10_wrapper.c
components/guition_jc1060_bsp/utils/: backlight_test.c  backlight_test.h  display_hw_test.c  display_hw_test.h  i2c_test.c  i2c_test.h  rtc_ntp_sync.c  rtc_ntp_sync.h  rtc_test.c  sd_card_functions.c
components/rtc_ntp_sync/: CMakeLists.txt  rtc_ntp_sync.c  rtc_ntp_sync.h
docs/: BOOTSTRAP_SEQUENCE.md  BOOTSTRAP_STRATEGY.md  BSP_FRAMEBUFFER_FIX.md  BUFFER_ARCHITECTURE.md  ESP_HOSTED_RESET_STRATEGIES.md  I2C_MIPI_DSI_CONFLICT.md  LVGL_DSI_CONFIGURATION.md  LVGL_TOUCH_FIX.md  LVGL_V9_FRAME_BUFFER_FIX.md  NEW_SESSION_PROMPT.md  PROJECT_STATUS.md  PROMPT_LOG_MONITOR.md  WIFI_FIRST_BOOT_ISSUE.md
docs/vendor_docs/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  backlight_test.c  backlight_test.h  bootstrap_manager.c  bootstrap_manager.h  build_info.h.in  display_jd9165.c  display_jd9165.h  es8311_audio.c  es8311_audio.h  esp_hosted_wifi.c  esp_hosted_wifi.h  feature_flags.h  hw_init.c  hw_init.h  i2c_utils.c  i2c_utils.h  idf_component.yml  lvgl_demo.c  lvgl_demo.h  lvgl_init.c  lvgl_init.h  main.c  main_lvgl_test.c  rtc_ntp_sync.c  rtc_rx8025t.c  rtc_rx8025t.h  rtc_test.c  rtc_test.h  sd_card_example_common.h  sd_card_example_main.c  sd_card_functions.c  sd_card_manager.c  sdmmc_arbiter.c  touch_gt911.c  touch_gt911.h  wifi_config.h.example
main/include/: lvgl_dashboard.h
main/src/: lvgl_dashboard.c
main/tests/: display_hw_test.c  display_hw_test.h
prompts/: AI_CONTEXT.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_REFACTOR_V2.md  DASHBOARD_UI.md  LOG_MONITOR.md  NEW_SESSION.md  ui_refactor_remove_page3_simplify_overlays.md
prompts/old/: .gitkeep  AI_CONTEXT.md  DASHBOARD_UI.md  LOG_MONITOR.md  NEW_SESSION.md
